--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "katekyo",
+  "name": "langages",
   "version": "1.0.0",
   "description": "My mind-blowing Nuxt.js project",
   "author": "tanishi",
@@ -13,6 +13,7 @@
   "dependencies": {
     "firebase": "^7.15.1",
     "nuxt": "^2.0.0",
+    "nuxt-i18n": "^6.12.2",
     "vue-js-modal": "^2.0.0-rc.3"
   },
   "devDependencies": {
