languageのスペルミスの修正

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "langages",
+  "name": "languages",
   "version": "1.0.0",
   "description": "My mind-blowing Nuxt.js project",
   "author": "tanishi",
