--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^7.15.1",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.12.2",
-    "vue-js-modal": "^2.0.0-rc.3"
+    "vue-js-modal": "^2.0.0-rc.3",
+    "vue-scrollto": "^2.18.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
